# InteractiveAndRobustMeshBooleans

./: CMakeLists.txt  irmb.cpp  irmb.h  lrmb.cpp  lrmb.h  vmath.h
code/: irmb.cpp
